This lab covers three aspects of the Loom project: virtual threads, structured concurrency, and scoped values.